--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <title>Browser extensions manager UI</title>
 </head>
 <body>
+  <div class="container">
   <header>
-    <div class="top-bar">
+    <div class="top-bar mt-2">
       <img src="./assets/images/logo.svg" alt="logo">
       <div class="mode-togle">
         <img src="./assets/images/icon-moon.svg" alt="toggle-dark-mode">
@@ -20,32 +21,18 @@
     </div>
   </header>
   <main>
-      <div class="interactivity">
-        <h1 class="text-header">Extensions List</h1>
-        <div class="iteractive-btns">
-          <button class="button">All</button>
-          <button class="button">Active</button>
-          <button class="button">Inactive</button>
+      <div class="interactivity mt-3">
+        <h1 class="text-header text-blue">Extensions List</h1>
+        <div class="iteractive-btns mt-1">
+          <button class="button text-blue">All</button>
+          <button class="button text-blue">Active</button>
+          <button class="button text-blue">Inactive</button>
         </div>
       </div>
-      <div class="extensions">
-        <div class="extension-card">
-          <div>
-            <img src="./assets/images/logo-devlens.svg" alt="dev lens">
-            <div>
-              <p class="text-semi-header">DevLens</p>
-              <p>Quickly inspect page layouts and visualize element boundaries</p>
-            </div>
-          </div>
-          <div>
-            <button>Remove</button>
-            <label class="switch">
-              <input type="checkbox" checked>
-              <span class="slider round"></span>
-            </label>
-          </div>
-        </div>
+      <div class="extensions mt-2">
       </div>
   </main>
+</div>
+  <script src="./index.js" type="module"></script>
 </body>
 </html>
