--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
   <main>
       <div class="interactivity mt-3">
         <h1 class="text-header text-blue">Extensions List</h1>
-        <div class="iteractive-btns mt-1">
-          <button class="button text-blue">All</button>
-          <button class="button text-blue">Active</button>
-          <button class="button text-blue">Inactive</button>
-        </div>
+        <ul class="iteractive-btns mt-1">
+          <li><button class="button text-blue">All</button></li>
+          <li><button class="button text-blue active">Active</button></li>
+          <li><button class="button text-blue">Inactive</button></li>
+        </ul>
       </div>
       <div class="extensions mt-2">
       </div>
