--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <div class="container">
   <header>
     <div class="top-bar mt-2">
-      <img src="./assets/images/logo.svg" alt="logo">
-      <div class="mode-togle">
-        <img src="./assets/images/icon-moon.svg" alt="toggle-dark-mode">
-      </div>
+      <img id="logo" src="./assets/images/logo.svg" alt="logo">
+      <button aria-label="toggle dark mode" id="dark-mode-toggle" class="mode-togle">
+        <img id="dark-light-icon" src="./assets/images/icon-moon.svg" alt="toggle-dark-mode">
+      </button>
     </div>
   </header>
   <main>
