Filter JSON data

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main>
       <div class="interactivity mt-3">
         <h1 class="text-header text-blue">Extensions List</h1>
-        <ul class="iteractive-btns mt-1">
+        <ul class="interactive-btns mt-1">
           <li><button class="button text-blue">All</button></li>
           <li><button class="button text-blue active">Active</button></li>
           <li><button class="button text-blue">Inactive</button></li>
